cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTestCase/macros.cpp
#define MMM(x) x
namespace std {}

int main() {
    MMM(std)::cout << "Hello";
}
